[gd_scene load_steps=19 format=3 uid="uid://h80ckumhkhx1"]

[ext_resource type="Script" path="res://Code/Game/Game.gd" id="1_y51tq"]
[ext_resource type="Resource" uid="uid://c163liyttkno0" path="res://Code/runtime_data.tres" id="2_kjf7b"]
[ext_resource type="PackedScene" uid="uid://blshd046rs1xp" path="res://Code/Main/background.tscn" id="3_m7pa7"]
[ext_resource type="Script" path="res://Code/Game/MusicBars.gd" id="4_1dme2"]
[ext_resource type="PackedScene" uid="uid://cp6p3evs6p373" path="res://hit_goblin_manager.tscn" id="4_w6fj2"]
[ext_resource type="PackedScene" uid="uid://d8ys1h6r0d4t" path="res://Code/SpaceEffect/BlockGroup.tscn" id="5_qe3rx"]
[ext_resource type="Script" path="res://Code/Game/DanceManager.gd" id="6_fkh8t"]
[ext_resource type="PackedScene" uid="uid://482qvsvj2xx2" path="res://Code/DancingGoblin.tscn" id="6_jjuxq"]
[ext_resource type="Resource" uid="uid://du3ifuemtq5do" path="res://Code/init_dialog.tres" id="11_g365p"]
[ext_resource type="Script" path="res://Code/Game/story.gd" id="11_rnb1c"]
[ext_resource type="Texture2D" uid="uid://cye4gy8yieujf" path="res://Assets/DialougeBOX.png" id="12_2ymm5"]
[ext_resource type="Script" path="res://Code/Game/RandomTextManager.gd" id="13_iurd3"]
[ext_resource type="Script" path="res://TextBox.gd" id="13_p8gi1"]
[ext_resource type="PackedScene" uid="uid://bjq88vs4wuxwq" path="res://Code/fireing_humans.tscn" id="14_cyj3i"]
[ext_resource type="Resource" uid="uid://15xuf645t7vj" path="res://Code/random_happy_dialogs.tres" id="14_g2vek"]
[ext_resource type="PackedScene" uid="uid://dkour2dh7ebam" path="res://Code/Player.tscn" id="16_asalf"]
[ext_resource type="FontFile" uid="uid://dk1k8buhdg0iv" path="res://Assets/font/bitfont.ttf" id="16_o6cia"]

[sub_resource type="LabelSettings" id="LabelSettings_071eo"]
font = ExtResource("16_o6cia")
font_color = Color(0.12549, 0.12549, 0.12549, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_y51tq")
_runtime_data = ExtResource("2_kjf7b")

[node name="Background" parent="." instance=ExtResource("3_m7pa7")]

[node name="MusicBars" type="Control" parent="."]
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_left = -3.0
offset_top = 92.0
offset_right = -3.0
offset_bottom = 92.0
script = ExtResource("4_1dme2")

[node name="ColorRect" type="ColorRect" parent="MusicBars"]
layout_mode = 0
offset_left = -2.0
offset_top = 390.0
offset_right = 521.0
offset_bottom = 430.0
color = Color(0.113725, 0.113725, 0.113725, 1)

[node name="Collector" type="Control" parent="MusicBars"]
anchors_preset = 0

[node name="LeftGroup" type="Control" parent="MusicBars/Collector"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BlockGroup1" parent="MusicBars/Collector/LeftGroup" instance=ExtResource("5_qe3rx")]
offset_left = 76.0
offset_top = 410.0
offset_right = 76.0
offset_bottom = 410.0

[node name="BlockGroup2" parent="MusicBars/Collector/LeftGroup" instance=ExtResource("5_qe3rx")]
offset_left = 92.0
offset_top = 410.0
offset_right = 92.0
offset_bottom = 410.0

[node name="BlockGroup3" parent="MusicBars/Collector/LeftGroup" instance=ExtResource("5_qe3rx")]
offset_left = 127.0
offset_top = 410.0
offset_right = 127.0
offset_bottom = 410.0

[node name="BlockGroup4" parent="MusicBars/Collector/LeftGroup" instance=ExtResource("5_qe3rx")]
offset_left = 143.0
offset_top = 410.0
offset_right = 143.0
offset_bottom = 410.0

[node name="BlockGroup5" parent="MusicBars/Collector/LeftGroup" instance=ExtResource("5_qe3rx")]
offset_left = 159.0
offset_top = 410.0
offset_right = 159.0
offset_bottom = 410.0

[node name="BlockGroup6" parent="MusicBars/Collector/LeftGroup" instance=ExtResource("5_qe3rx")]
offset_left = 175.0
offset_top = 410.0
offset_right = 175.0
offset_bottom = 410.0

[node name="BlockGroup7" parent="MusicBars/Collector/LeftGroup" instance=ExtResource("5_qe3rx")]
offset_left = 210.0
offset_top = 410.0
offset_right = 210.0
offset_bottom = 410.0

[node name="BlockGroup8" parent="MusicBars/Collector/LeftGroup" instance=ExtResource("5_qe3rx")]
offset_left = 226.0
offset_top = 410.0
offset_right = 226.0
offset_bottom = 410.0

[node name="RightGroup" type="Control" parent="MusicBars/Collector"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BlockGroup9" parent="MusicBars/Collector/RightGroup" instance=ExtResource("5_qe3rx")]
offset_left = 269.0
offset_top = 410.0
offset_right = 269.0
offset_bottom = 410.0

[node name="BlockGroup10" parent="MusicBars/Collector/RightGroup" instance=ExtResource("5_qe3rx")]
offset_left = 304.0
offset_top = 410.0
offset_right = 304.0
offset_bottom = 410.0

[node name="BlockGroup11" parent="MusicBars/Collector/RightGroup" instance=ExtResource("5_qe3rx")]
offset_left = 320.0
offset_top = 410.0
offset_right = 320.0
offset_bottom = 410.0

[node name="BlockGroup12" parent="MusicBars/Collector/RightGroup" instance=ExtResource("5_qe3rx")]
offset_left = 336.0
offset_top = 410.0
offset_right = 336.0
offset_bottom = 410.0

[node name="BlockGroup13" parent="MusicBars/Collector/RightGroup" instance=ExtResource("5_qe3rx")]
offset_left = 365.0
offset_top = 410.0
offset_right = 365.0
offset_bottom = 410.0

[node name="BlockGroup14" parent="MusicBars/Collector/RightGroup" instance=ExtResource("5_qe3rx")]
offset_left = 399.0
offset_top = 410.0
offset_right = 399.0
offset_bottom = 410.0

[node name="BlockGroup15" parent="MusicBars/Collector/RightGroup" instance=ExtResource("5_qe3rx")]
offset_left = 415.0
offset_top = 410.0
offset_right = 415.0
offset_bottom = 410.0

[node name="HitGoblinManager" parent="." instance=ExtResource("4_w6fj2")]
position = Vector2(257, 231)

[node name="FireingHumans" parent="." instance=ExtResource("14_cyj3i")]

[node name="Story" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("11_rnb1c")
runtime_data = ExtResource("2_kjf7b")
init_dialog = ExtResource("11_g365p")

[node name="MainTextBox" type="NinePatchRect" parent="Story"]
visible = false
self_modulate = Color(1, 1, 1, 0.666667)
z_index = 15
texture_filter = 1
layout_mode = 0
offset_left = 63.0
offset_top = 328.0
offset_right = 229.0
offset_bottom = 422.0
texture = ExtResource("12_2ymm5")
region_rect = Rect2(0, 0, 46, 30)
script = ExtResource("13_p8gi1")

[node name="Label" type="Label" parent="Story/MainTextBox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 159.0
offset_bottom = 72.0
label_settings = SubResource("LabelSettings_071eo")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 35

[node name="QuickTextTimer" type="Timer" parent="Story/MainTextBox"]
one_shot = true

[node name="RandomTextManager" type="Node" parent="Story"]
script = ExtResource("13_iurd3")
random_happy_dialoges = ExtResource("14_g2vek")

[node name="DanceManager" type="Node2D" parent="."]
script = ExtResource("6_fkh8t")

[node name="DancingGoblins" type="Node2D" parent="DanceManager"]

[node name="DancingGoblin1" parent="DanceManager/DancingGoblins" instance=ExtResource("6_jjuxq")]
visible = false
position = Vector2(26, 237)
rotation = 0.160599

[node name="DancingGoblin2" parent="DanceManager/DancingGoblins" instance=ExtResource("6_jjuxq")]
visible = false
position = Vector2(490, 280)
rotation = -0.139821
scale = Vector2(2.5, 2.5)

[node name="Goblin" parent="DanceManager/DancingGoblins/DancingGoblin2" index="0"]
flip_h = true

[node name="DancingGoblin3" parent="DanceManager/DancingGoblins" instance=ExtResource("6_jjuxq")]
visible = false
position = Vector2(209, 449)
rotation = 0.00588244

[node name="Goblin" parent="DanceManager/DancingGoblins/DancingGoblin3" index="0"]
flip_h = true

[node name="ColorRect" parent="DanceManager/DancingGoblins/DancingGoblin3" index="1"]
visible = false

[node name="DancingGoblin4" parent="DanceManager/DancingGoblins" instance=ExtResource("6_jjuxq")]
visible = false
position = Vector2(149, 449)
rotation = 0.0113119

[node name="ColorRect" parent="DanceManager/DancingGoblins/DancingGoblin4" index="1"]
visible = false

[node name="DancingGoblin5" parent="DanceManager/DancingGoblins" instance=ExtResource("6_jjuxq")]
visible = false
position = Vector2(81, 386)
rotation = -0.000930503
scale = Vector2(1.7, 1.7)

[node name="ColorRect" parent="DanceManager/DancingGoblins/DancingGoblin5" index="1"]
visible = false

[node name="DancingGoblin6" parent="DanceManager/DancingGoblins" instance=ExtResource("6_jjuxq")]
visible = false
position = Vector2(237, 232)
rotation = -0.0153587
scale = Vector2(2.2, 2.2)

[node name="DancingGoblin7" parent="DanceManager/DancingGoblins" instance=ExtResource("6_jjuxq")]
visible = false
position = Vector2(170, 94)
rotation = -0.00406003
scale = Vector2(2.3, 2.3)

[node name="Goblin" parent="DanceManager/DancingGoblins/DancingGoblin7" index="0"]
position = Vector2(1.99592, 1.00811)

[node name="DancingGoblinGod" parent="DanceManager" instance=ExtResource("6_jjuxq")]
visible = false
modulate = Color(1, 1, 1, 0.25098)
position = Vector2(262, 212)
scale = Vector2(25, 25)

[node name="Goblin" parent="." instance=ExtResource("16_asalf")]
z_index = 15
position = Vector2(238, 445)
scale = Vector2(2.39583, 2.39583)

[connection signal="hit_made" from="HitGoblinManager" to="." method="_on_hit_made"]
[connection signal="hit_made" from="HitGoblinManager" to="MusicBars" method="_on_hit_goblin_manager_hit_made"]
[connection signal="hit_made" from="HitGoblinManager" to="Story" method="_on_hit_goblin_manager_hit_made"]
[connection signal="flamed" from="FireingHumans" to="." method="_on_fireing_humans_flamed"]
[connection signal="flamed" from="FireingHumans" to="Story/RandomTextManager" method="_on_fireing_humans_flamed"]
[connection signal="human_escaped" from="FireingHumans" to="." method="_on_fireing_humans_human_escaped"]
[connection signal="show_left_side" from="Story" to="." method="_on_story_show_left_side" flags=6]
[connection signal="timeout" from="Story/MainTextBox/QuickTextTimer" to="Story/MainTextBox" method="_on_quick_text_timer_timeout"]

[editable path="DanceManager/DancingGoblins/DancingGoblin2"]
[editable path="DanceManager/DancingGoblins/DancingGoblin3"]
[editable path="DanceManager/DancingGoblins/DancingGoblin4"]
[editable path="DanceManager/DancingGoblins/DancingGoblin5"]
[editable path="DanceManager/DancingGoblins/DancingGoblin7"]
